# calc

./: Cargo.toml  LICENSE  README.md
doc/: summary.md
examples/: repl.rs
src/: ast.rs  calc.rs  equation.pest  graph.rs  lib.rs  parser.rs  solver.rs
src/solver/: mod.rs
