[package]
name = "rust-expression"
version = "0.2.0"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Calculator and solver for linear equations."
repository = "https://github.com/msuesskraut/calc"
readme = "Readme.md"
keywords = ["calc", "math", "solver"]
categories = ["mathematics"]

[dependencies]

pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4"
thiserror = "1.0"

[dev-dependencies]

linefeed = "0.6"
