[package]
name = "rust-expression"
version = "0.3.0"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Calculator and solver for linear equations."
repository = "https://github.com/msuesskraut/calc"
readme = "README.md"
keywords = ["calc", "math", "solver"]
categories = ["mathematics"]

[dependencies]

num = "0.4"
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4"
thiserror = "1.0"

[dev-dependencies]

linefeed = "0.6"
float-cmp = "0.8"
